# website-monitoring-agent

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
examples/: langchain_monitor.py
src/website_agent/: .gitignore
src/website_agent/agents/: langchain_website_agent.py  website_agent.py
